[gd_scene load_steps=7 format=3 uid="uid://bci26n3kywx5i"]

[ext_resource type="PackedScene" uid="uid://cu0m2t0cq28c6" path="res://src/Characters/Players/Player1/player.tscn" id="1_3vmhj"]
[ext_resource type="Script" path="res://src/MainScreens/survivor_game.gd" id="1_iddai"]
[ext_resource type="PackedScene" uid="uid://bwey8fjrcr8qy" path="res://src/maps/trees/pin_tree.tscn" id="2_ter85"]
[ext_resource type="PackedScene" uid="uid://r21si714ymj1" path="res://src/Characters/Enemys/Mob/mob.tscn" id="3_ofjwr"]
[ext_resource type="PackedScene" uid="uid://bqxqinraxg203" path="res://src/MainScreens/game_over.tscn" id="4_fmg0v"]

[sub_resource type="Curve2D" id="Curve2D_oj1yw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -452.564, -349.065, 0, 0, 0, 0, 1565.37, -345.654, 0, 0, 0, 0, 1565.37, 841.23)
}
point_count = 3

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(-1, 0)
script = ExtResource("1_iddai")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1440.0
offset_bottom = 720.0

[node name="Player" parent="." instance=ExtResource("1_3vmhj")]
position = Vector2(469, 360)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-258.919, -220.958)
scale = Vector2(0.879614, 0.879614)
curve = SubResource("Curve2D_oj1yw")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-452.564, -349.065)
rotation = 0.00169035

[node name="PinTree" parent="." instance=ExtResource("2_ter85")]
position = Vector2(726, 237)

[node name="Mob" parent="." instance=ExtResource("3_ofjwr")]
position = Vector2(919, 470)
score = 0

[node name="PinTree2" parent="." instance=ExtResource("2_ter85")]
position = Vector2(323, 648)

[node name="PinTree3" parent="." instance=ExtResource("2_ter85")]
position = Vector2(1219, 261)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.314
autostart = true

[node name="GameOver" parent="." instance=ExtResource("4_fmg0v")]
unique_name_in_owner = true
visible = false

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
